# lits-llm

./: .env.example  .gitignore  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/workflows/: publish.yml
demos/blocksworld/: bw_data_generated_domain.pddl
demos/demo_results/: config.json  treetojsonl.jsonl
demos/lits_benchmark/: __init__.py  blocksworld.py  crosswords.py  dbbench.py  dbbench_db_setup.py  kgqa.py  kgqa_tools.py  math_qa.py  terminal_bench.py  terminal_bench_tools.py
docs/: AWS_BEDROCK_INFERENCE_PROFILES.md  CAVEAT.md  LITS_DESIGN.md  PROMPT_INJECTION_DESIGN.md  REWARD_MODEL_INTERFACE.md  TRAJ_CHECKPOINT.md  TREE_VISUALIZATION.md
docs/agents/: AsyncNativeReAct.md  ENV_CHAIN.md  LEARNING_LOOP.md  NativeReAct.md  ReAct.md  TREE_SEARCH_GUIDE.md
docs/cli/: protocol.md  resume.md  resume_qa.md  search.md
docs/components/: callback.md
docs/demo_paper/: 3.lits.tex
docs/demos/: db_bench.md
docs/embedding/: EMBEDDING.md
docs/eval/: CUSTOM_EVALUATORS.md  INCREMENTAL_EVALUATION.md  OUTPUT_FILES.md  RESULT_SAVERS.md  SERIALIZATION.md
docs/legacy/: buffered_action_removal.md
docs/lm/: INFERENCE_LOGGER.md  NATIVE_TOOL_USE_ISSUES.md  OLLAMA_LOCAL.md  PDF_QUERY_TOOL.md  TGI_REMOTE_MODELS.md  bedrock_connectivity.md
docs/log/: EXECUTION_LOG.md  code_review.md
docs/memory/: LOCAL_MEMORY_BACKEND.md  TRAJECTORY_SEARCH_ENGINE.md
docs/prompts/: ADDING_PROMPTS.md
docs/structures/: FAQ.md  STRUCTURES.md
lits/: __init__.py  base_llm.py  config.py  eval.py  framework_config.py  log.py  metrics.py  prompt.py  registry.py  type_registry.py  visualize.py
lits/agents/: __init__.py  base.py  main.py  react_chat.py  registry.py  utils.py
lits/benchmarks/: __init__.py  blocksworld.py  main.py  mapeval.py  math_qa.py  registry.py
lits/cli/: __init__.py  args.py  chain.py  commands.py  eval_chain.py  eval_search.py  resume_clean.py  search.py
lits/clients/: pdf_client.py  sql_client.py
lits/components/: __init__.py  base.py  factory.py  utils.py
lits/embedding/: bedrock.py
lits/eval/: __init__.py  general_eval.py  inference_report.py  llm_call_logger.py  results.py
lits/lm/: __init__.py  async_bedrock.py  base.py  bedrock_chat.py  loader.py  openai_chat.py  tgi.py
lits/memory/: __init__.py  backends.py  config.py  manager.py  retrieval.py  types.py
lits/prompts/: prompt.py  registry.py
lits/structures/: __init__.py  base.py  env_grounded.py  qa.py  tool_use.py  trace.py
lits/tools/: __init__.py  base.py  clue_tools.py  config.py  constant.py  langchain_tools.py  load.py  mapeval_client.py  mapeval_tools.py  sql_tools.py  utils.py
lits/utils/: json_parser.py
lits_benchmark/: __init__.py  blocksworld.py  crosswords.py  main.py  mapeval.py  math_qa.py
lits_benchmark/experiments/: component_factory.py  model_loader.py  search_config.py
lits_benchmark/formulations/: __init__.py
results_clue/Qwen3-0.6B/: react_config.json
unit_test/: example_run_load_models_test.sh  probe_qdrant_collection.py  probe_qdrant_collection_by_mem0.py  test.llm_metric.py  test_cit_efficiency_analysis.py  test_config_refactoring.py  test_env_chain_history_accumulation.py  test_env_chain_trajectory.py  test_env_state_serialization.py  test_general_eval.py  test_json_parser.py  test_load_models.py  test_memory_manager.py  test_memory_manager_mem0_backend.py  test_search_config.py  test_state_serialization.py  test_tool_use_quick.py  test_tree_common.py  test_tree_visualization.py  test_visualization_demo.py
unit_test/agents/: test_async_native_react.py  test_extract_answers.py  test_native_react_terminal_tool.py  test_react.py  test_sync_native_react.py  test_tree_common.py  test_tree_log_metadata.py
unit_test/cit/: test_bn_evaluator.py  test_cit_efficiency_analysis.py
unit_test/cli/: test_resume_clean.py
unit_test/components/: demo_load_evaluations.py  test_auto_registration.py  test_benchmark_registry.py  test_component_factory_registry.py  test_component_registry.py  test_crosswords_transition.py  test_dynamic_notes.py  test_env_grounded_transition.py  test_llm_policy_components.py  test_llm_reward_components.py  test_llm_transition.py  test_native_tool_use_policy.py  test_policy_reward_prompts.py  test_response_to_steps.py  test_sql_error_profiler.py  test_sql_validator.py  test_sync_native_tool_use_policy.py  (+2 more)
(+226 files in other folders)
