[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lits-llm"
version = "0.2.11"
description = "LITS: LLM Inference via Tree Search — modular agentic reasoning framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Xinzhe Li", email = "sergioli212@outlook.com" }]
keywords = ["LLM", "agent", "reasoning", "planning", "tree search"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

dependencies = [
    # --- Core Python packages ---
    "python-dotenv",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "regex>=2024.5.15",
    "requests>=2.32.3",
    "filelock>=3.18.0",
    "pydantic>=2.8.2",
    "diskcache",
    "openai>=1.35.10",
    "safetensors>=0.4.3",
    "tokenizers>=0.21.0",

    # --- Torch stack (core, not optional) ---
    "accelerate==1.6.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "torchviz==0.0.3",

    # --- Transformers ecosystem ---
    "transformers==4.51.3",
    "huggingface-hub>=0.30.2",
    "datasets",
    "autoawq; platform_system == 'Linux'",
    "inflect",

    # --- LangChain ecosystem ---
    "langchain",
    "langchain-huggingface",
    "langchain-community",

    # --- Geospatial / database ---
    "psycopg2-binary",
    "geoalchemy2",
    "geopandas",

    # --- for memory ---
    "mem0ai",
    "sentence_transformers",
    "litellm",
    "boto3",

    # --- for PDF tools ---
    "pypdf",
    "qdrant-client",

    # --- for notebook testing ---
    "ipywidgets"

]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "ipython",
    "jupyter_client",
    "jupyter_core",
    "matplotlib-inline",
    "notebook",
    "build", 
    "twine"
]

[project.scripts]
lits-search = "lits.cli.search:main"
lits-eval = "lits.cli.eval_search:main"
lits-chain = "lits.cli.chain:main"
lits-eval-chain = "lits.cli.eval_chain:main"

[project.urls]
Homepage = "https://github.com/xinzhel/langagent"
Repository = "https://github.com/xinzhel/langagent"
Issues = "https://github.com/xinzhel/langagent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lits*"]

[tool.setuptools]
license-files = []
